виносимо дані в index.js

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,26 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      let dialogData = [
+      {id : 1 , name: '1A' },
+      {id : 2 , name: '2A' },
+      {id : 3 , name: '3A' },
+      {id : 4 , name: '4A' },
+      {id : 5 , name: '5A' },
+      {id : 6 , name: '6A' }
+      ]
+      let messageData = [
+      {id: 1,name:'hello'},
+      {id: 2,name:'h'},
+      {id: 3,name:'ha'},
+      {id: 4,name:'hihi'},
+      {id: 5,name:'hyy'},
+      {id: 6,name:'YOOOOOO'}
+      ]
+
+
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -41,3 +60,4 @@
     -->
   </body>
 </html>
+
